@@ -44,6 +44,7 @@ import com.wazuh.contentmanager.cti.catalog.processor.RuleProcessor;
 import com.wazuh.contentmanager.cti.catalog.service.PolicyHashService;
 import com.wazuh.contentmanager.cti.catalog.utils.HashCalculator;
 import com.wazuh.contentmanager.settings.PluginSettings;
+import com.wazuh.contentmanager.utils.Constants;
 
 /**
  * Handles synchronization logic for the unified content consumer. Processes rules, decoders, kvdbs,
@@ -169,9 +170,9 @@ public class UnifiedConsumerSynchronizer extends AbstractConsumerSynchronizer {
      * @param indexName The policy index name.
      */
     private void initializeSpaces(String indexName) {
-        initializeSpace(indexName, Space.DRAFT.toString());
-        initializeSpace(indexName, Space.TEST.toString());
-        initializeSpace(indexName, Space.CUSTOM.toString());
+        this.initializeSpace(indexName, Space.DRAFT.toString());
+        this.initializeSpace(indexName, Space.TEST.toString());
+        this.initializeSpace(indexName, Space.CUSTOM.toString());
     }
 
     /**
@@ -185,7 +186,7 @@ public class UnifiedConsumerSynchronizer extends AbstractConsumerSynchronizer {
             // Check if the space document already exists using a search query
             SearchRequest searchRequest = new SearchRequest(indexName);
             SearchSourceBuilder searchSourceBuilder = new SearchSourceBuilder();
-            searchSourceBuilder.query(QueryBuilders.termQuery("space.name", spaceName));
+            searchSourceBuilder.query(QueryBuilders.termQuery(Constants.Q_SPACE_NAME, spaceName));
             searchSourceBuilder.size(0); // We only care about the count
             searchRequest.source(searchSourceBuilder);
 
@@ -201,31 +202,31 @@ public class UnifiedConsumerSynchronizer extends AbstractConsumerSynchronizer {
                 policy.setId(uuid);
                 policy.setTitle(title);
                 policy.setDescription(title);
-                policy.setAuthor("");
+                policy.setAuthor("Wazuh Inc.");
                 policy.setRootDecoder("");
                 policy.setDocumentation("");
                 policy.setIntegrations(Collections.emptyList());
-                policy.setReferences(Collections.emptyList());
+                policy.setReferences(List.of("https://wazuh.com"));
                 policy.setDate(date);
                 policy.setModified(date);
 
                 // TODO: Study the model policy and delete the extra fields
                 Map<String, Object> docMap = this.mapper.convertValue(policy, Map.class);
-                docMap.remove("type"); // Delete the field type inside the document
+                docMap.remove(Constants.KEY_TYPE); // Delete the field type inside the document
 
                 String docJson = this.mapper.writeValueAsString(docMap);
                 String docHash = HashCalculator.sha256(docJson);
 
                 Map<String, Object> space = new HashMap<>();
-                space.put("name", spaceName);
-                space.put("hash", Map.of("sha256", docHash));
+                space.put(Constants.KEY_NAME, spaceName);
+                space.put(Constants.KEY_HASH, Map.of("sha256", docHash));
 
                 Map<String, Object> source = new HashMap<>();
-                source.put("document", docMap);
-                source.put("space", space);
+                source.put(Constants.KEY_DOCUMENT, docMap);
+                source.put(Constants.KEY_SPACE, space);
                 // TODO: change to usage of method to calculate space hash
-                source.put("hash", Map.of("sha256", docHash));
-                source.put("type", "policy");
+                source.put(Constants.KEY_HASH, Map.of("sha256", docHash));
+                source.put(Constants.KEY_TYPE, Constants.KEY_POLICY);
 
                 IndexRequest request =
                         new IndexRequest(indexName)
